--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -161,7 +161,7 @@ template(name='facet')
         //- div
         each filtering_res
             if name
-                .selector.ui.large.compact.button.toggle_selection(class=toggle_value_class)
+                .selector.ui.compact.button.toggle_selection(class=toggle_value_class)
                     strong #{name}
                     if is_admin
                         small #{cal_count} #{count}
