--- a/components/work_order.jade
+++ b/components/work_order.jade
@@ -31,7 +31,7 @@ template(name='work_orders')
                     +work_order
                     
                     
-template(name='work_order')
+template(name='work_order_card_template')
     .ui.fluid.segment
         //- .ui.header #{title}
         if complete
@@ -114,7 +114,7 @@ template(name='work_order_view')
                     .ui.segment
                         +textarea_view key='content' icon='content' label='content' direct=true
                     +image_view key='image' label='image' direct=true
-                    +array_view key='location_tags' label='location tags (eg. pavlion, 3rd floor window)' icon='marker' direct=true
+                    +array_view key='location_tags' label='location tags (eg. pavilion, 3rd floor window)' icon='marker' direct=true
                     +array_view key='tags' label='tags' icon='tags' direct=true
                     +boolean_view key='response_requested' label='response requested' icon='phone' direct=true
                     if response_requested
@@ -127,104 +127,3 @@ template(name='work_order_view')
                 .four.wide.column 
                     +number_view key='building_number' key='building #' icon='building' direct=true
                     +number_view key='unit_number' label='unit #' icon='room' direct=true
-
-
-
-
-template(name='building_facet')
-    .ui.header 
-        +i name='building' classes='ui mini inline image'
-        |building
-    if selected_building_tags
-        #clear_building_tags.ui.large.icon.circular.button
-            i.remove.icon
-        each selected_building_tags
-            .unselect_building_tag.ui.large.circular.button
-                strong #{this}
-    each building_tags
-        .ui.circular.button.select_building_tag(class=location_tag_class) 
-            strong #{this.name}
-            // if isInRole 'admin'
-            //     small #{this.count}
-    // .ui.divider
-
-
-template(name='unit_facet')
-    .ui.header
-        +i name='room' classes='ui mini inline image'
-        | unit
-    if selected_unit_tags
-        #clear_unit_tags.ui.large.icon.circular.button
-            i.remove.icon
-        each selected_unit_tags
-            .unselect_unit_tag.ui.large.circular.button
-                strong #{this}
-    // .ui.hidden.fitted.divider
-    each unit_tags
-        .ui.circular.button.select_unit_tag(class=unit_tag_class) 
-            strong #{this.name}
-            // if isInRole 'admin'
-            //     small #{this.count}
-    // .ui.divider
-
-template(name='location_tags_facet')
-    .ui.header 
-        |location tags
-        +i name='hashtag'
-    // .ui.left.icon.small.input
-    //     i.search.icon
-    //     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" placeholder='Search...'
-    if selected_location_tags
-        // .ui.header Selected location_tagss
-        #clear_location_tagss.ui.large.icon.circular.button
-            i.remove.icon
-        each selected_location_tags
-            .unselect_location_tags.ui.large.circular.button
-                strong #{this}
-    // .ui.hidden.fitted.divider
-    each location_tagss
-        .ui.circular.button.select_keyword(class=cloud_keyword_class) 
-            strong #{this.name}
-            // if isInRole 'admin'
-            //     small #{this.count}
-
-
-
-
-
-template(name='username_facet')
-    .ui.inverted.header
-        img(src="https://png.icons8.com/color/100/000000/couple-man-woman.png")
-        // +icon48 name='couple' classes='ui mini inline image' tooltip='Filter Authors'
-        | Authors
-    if selected_author_ids
-        #clear_authors.ui.large.icon.circular.button
-            i.remove.icon
-        each selected_author_ids
-            .unselect_author.ui.large.circular.button
-                strong #{this}
-    each author_tags
-        .ui.circular.button.select_author(class=cloud_tag_class) 
-            img.ui.avatar.image(src="{{c.url profile.image_id width=100 height=100 gravity='face' crop='fill'}}")
-            strong #{username}
-            // if isInRole 'admin'
-            //     small #{this.count}
-    // .ui.divider
-template(name='parent_facet')
-    .ui.inverted.header
-        // img(src="https://png.icons8.com/color/100/000000/couple-man-woman.png")
-        // +icon48 name='couple' classes='ui mini inline image' tooltip='Filter Authors'
-        | Parent Docs
-    if selected_parent_ids
-        #clear_parents.ui.large.icon.circular.button
-            i.remove.icon
-        each selected_parent_ids
-            .unselect_parent.ui.large.circular.button
-                strong #{this}
-    each available_parent_docs
-        .ui.circular.button.select_author(class=cloud_tag_class) 
-            +icon48 name=icon_class
-            | #{title}
-            // if isInRole 'admin'
-            //     small #{this.count}
-    // .ui.divider
