--- a/client/home.jade
+++ b/client/home.jade
@@ -154,7 +154,7 @@ template(name='work_small')
 
 
 template(name='work_order_small')
-    a.ui.fluid.button(href="/work_orders")
+    a.ui.fluid.button(href="/m/work_order")
         +ismall name='maintenance'
         .ui.inline.header
             |work orders
