--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -15,7 +15,7 @@ template(name='delta')
                             | #{title}
                     unless is_loading
                         if currentUser
-                            .ui.icon.large.compact.button.add_model_doc(title="Add #{title}")
+                            .ui.icon.large.compact.button.add_model_doc(title="add #{title}")
                                 //- +i name='plus' classes='ui avatar image'
                                 i.plus.large.icon
                         +user_list_toggle key='bookmark_ids' icon='bookmark' label='bookmark' color='red'
@@ -29,9 +29,9 @@ template(name='delta')
                         // //     .ui.icon.button.select_session(class=session_selector_class title='select session')
                         // //         i.play.icon
                         if current_delta
-                            if is_dev
-                                .ui.icon.large.button.print_delta(title='print session doc')
-                                    i.code.icon
+                            //- if is_dev
+                            .ui.icon.large.button.print_delta(title='print session doc')
+                                i.code.icon
                             .ui.reset.icon.large.button(title='reload session')
                                 //- +i name='refresh' classes='ui avatar image'
                                 i.refresh.icon
@@ -98,6 +98,9 @@ template(name='delta')
                     +Template.dynamic template=view_mode_template
             .row 
                 .sixteen.wide.column
+                    if model_stats_exists
+                        +Template.dynamic template=model_stats
+    
                     .ui.header calculations
                     .ui.button rerun calculations
                 
@@ -154,9 +157,9 @@ template(name='facet')
             else 
                 |#{key}
                 //- i.dropdown.icon
-        .ui.icon.small.transparent.input
-            i.search.icon
-            input.add_filter(type='text')
+        //- .ui.icon.small.transparent.input
+        //-     i.search.icon
+        //-     input.add_filter(type='text')
             //- .active.content
         //- div
         each filtering_res
