--- a/components/dev.jade
+++ b/components/dev.jade
@@ -1,6 +1,7 @@
 template(name='dev')
     .ui.container.padded.grid
         .row
+            a.ui.button(href="/owners") owners
             .sixteen.wide.column
                 .ui.input
                     value key
