--- a/components/votes.jade
+++ b/components/votes.jade
@@ -91,7 +91,7 @@ template(name='vote_edit')
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
-                    +activity
+                    //- +activity
                 .six.wide.column
                     +boolean_edit key='true_false' label='true/false' direct=true 
                     unless true_false
