--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -16,8 +16,10 @@ template(name='comments')
                     .meta #{when}
                         |by 
                         a(href="/user/#{author.username}") #{author.first_name} #{author.last_name}
-                        +voting
-                        +remove_button
+                        if currentUser
+                            +voting
+                            if can_edit
+                                +remove_button
 
 
 template(name='viewing')
@@ -26,8 +28,9 @@ template(name='viewing')
         .ui.icon.button.mark_read
             i.eye.icon
     else 
-        .ui.icon.button.mark_unread
-            i.cancel.icon
+        if is_dev
+            .ui.icon.button.mark_unread
+                i.cancel.icon
     .ui.inline.header viewed by
     each read_ids
         +user_info
